{
  "version": 4,
  "terraform_version": "1.2.0",
  "serial": 2112,
  "lineage": "a9c2a767-11dc-4f57-24b0-8cbabb0860e8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:389662951147:listener/app/test-dev-alb/23e3be9d0d552c3e/92c081dddf69025b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:389662951147:listener/app/test-dev-alb/23e3be9d0d552c3e/92c081dddf69025b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:389662951147:loadbalancer/app/test-dev-alb/23e3be9d0d552c3e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.terraform-alb",
            "aws_security_group.terraform_alb_sg",
            "aws_subnet.public-1a",
            "aws_subnet.public-1c",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:389662951147:listener/app/test-dev-alb/23e3be9d0d552c3e/82fc863fe245ae7c",
            "certificate_arn": "arn:aws:acm:us-east-1:389662951147:certificate/d712d7b5-1a8d-4a75-8c87-6a8194c52276",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:389662951147:targetgroup/test-dev-web-tg/0d4409eba7832b4d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:389662951147:listener/app/test-dev-alb/23e3be9d0d552c3e/82fc863fe245ae7c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:389662951147:loadbalancer/app/test-dev-alb/23e3be9d0d552c3e",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.virginia_cert",
            "aws_acm_certificate_validation.cert_valid",
            "aws_lb.terraform-alb",
            "aws_lb_target_group.alb_target_group",
            "aws_route53_record.route53_acm_dns_resolve",
            "aws_route53_zone.route53_zone",
            "aws_security_group.terraform_alb_sg",
            "aws_subnet.public-1a",
            "aws_subnet.public-1c",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-bastion-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-090fa75af13c156b4",
            "arn": "arn:aws:ec2:us-east-1:389662951147:instance/i-0dbdea673a73d8e81",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dbdea673a73d8e81",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-20220811040116683100000002",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04689c7031a690660",
            "private_dns": "ip-172-16-10-148.ec2.internal",
            "private_ip": "172.16.10.148",
            "public_dns": "ec2-3-92-228-182.compute-1.amazonaws.com",
            "public_ip": "3.92.228.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08c8231da09db3219",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1615056df5570fb",
            "tags": {
              "Env": "dev",
              "Name": "test-dev-bastion-ec2",
              "Project": "test",
              "Type": "bastion"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "test-dev-bastion-ec2",
              "Project": "test",
              "Type": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00d2fd75c195aa9f9"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.terraform_bastion_sg",
            "aws_subnet.public-1a",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-web-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-090fa75af13c156b4",
            "arn": "arn:aws:ec2:us-east-1:389662951147:instance/i-0d924094bdf39e2a9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d924094bdf39e2a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-20220811040116683100000002",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e64f36a2c5f84a68",
            "private_dns": "ip-172-16-20-254.ec2.internal",
            "private_ip": "172.16.20.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08156abd2d5a56d38",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0572583fb8ea893da",
            "tags": {
              "Env": "dev",
              "Name": "test-dev-web-ec2",
              "Project": "test",
              "Type": "web"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "test-dev-web-ec2",
              "Project": "test",
              "Type": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-097e719b22e303caa"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.terraform_web_sg",
            "aws_subnet.private-1a",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389662951147:internet-gateway/igw-05689153243db2825",
            "id": "igw-05689153243db2825",
            "owner_id": "389662951147",
            "tags": {
              "Env": "dev",
              "Name": "test-dev-igw",
              "Project": "test"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "test-dev-igw",
              "Project": "test"
            },
            "vpc_id": "vpc-026462a7946af80f3"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "terraform-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:389662951147:loadbalancer/app/test-dev-alb/23e3be9d0d552c3e",
            "arn_suffix": "app/test-dev-alb/23e3be9d0d552c3e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-dev-alb-1130560211.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:389662951147:loadbalancer/app/test-dev-alb/23e3be9d0d552c3e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-dev-alb",
            "security_groups": [
              "sg-045790e23d99128bf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0acbbc5c4c1fe612e"
              },
              {
                "subnet_id": "subnet-0d1615056df5570fb"
              }
            ],
            "subnets": [
              "subnet-0acbbc5c4c1fe612e",
              "subnet-0d1615056df5570fb"
            ],
            "vpc_id": "vpc-026462a7946af80f3",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.terraform_alb_sg",
            "aws_subnet.public-1a",
            "aws_subnet.public-1c",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:389662951147:targetgroup/test-dev-web-tg/0d4409eba7832b4d",
            "arn_suffix": "targetgroup/test-dev-web-tg/0d4409eba7832b4d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:389662951147:targetgroup/test-dev-web-tg/0d4409eba7832b4d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "test-dev-web-tg",
            "port": 3000,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "test-dev-web-tg",
              "Project": "test"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "test-dev-web-tg",
              "Project": "test"
            },
            "target_type": "instance",
            "vpc_id": "vpc-026462a7946af80f3"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:389662951147:targetgroup/test-dev-web-tg/0d4409eba7832b4d-20220811040251377800000004",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:389662951147:targetgroup/test-dev-web-tg/0d4409eba7832b4d",
            "target_id": "i-0d924094bdf39e2a9"
          },
          "dependencies": [
            "aws_instance.terraform-web-ec2",
            "aws_key_pair.keypair",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.terraform_web_sg",
            "aws_subnet.private-1a",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_rt_igw_r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05689153243db2825",
            "id": "r-rtb-09dd3ec8df840acc71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09dd3ec8df840acc7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389662951147:route-table/rtb-0be85239a0be1aa24",
            "id": "rtb-0be85239a0be1aa24",
            "owner_id": "389662951147",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "test-dev-private-rt",
              "Project": "test",
              "Type": "private"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "test-dev-private-rt",
              "Project": "test",
              "Type": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-026462a7946af80f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389662951147:route-table/rtb-09dd3ec8df840acc7",
            "id": "rtb-09dd3ec8df840acc7",
            "owner_id": "389662951147",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05689153243db2825",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "test-dev-public-rt",
              "Project": "test",
              "Type": "public"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "test-dev-public-rt",
              "Project": "test",
              "Type": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-026462a7946af80f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee575ff4ddb7d167",
            "route_table_id": "rtb-0be85239a0be1aa24",
            "subnet_id": "subnet-0572583fb8ea893da"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private-1a",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9f88e94d76db9a4",
            "route_table_id": "rtb-0be85239a0be1aa24",
            "subnet_id": "subnet-069bce8a64f3d7ca8"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private-1c",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06cd17e515d1f7037",
            "route_table_id": "rtb-09dd3ec8df840acc7",
            "subnet_id": "subnet-0d1615056df5570fb"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public-1a",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb5a180702d7f138",
            "route_table_id": "rtb-09dd3ec8df840acc7",
            "subnet_id": "subnet-0acbbc5c4c1fe612e"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public-1c",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389662951147:security-group/sg-045790e23d99128bf",
            "description": "terraform-alb-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-045790e23d99128bf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-alb-sg",
            "name_prefix": "",
            "owner_id": "389662951147",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "test-dev-alb-sg",
              "Project": "test"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "test-dev-alb-sg",
              "Project": "test"
            },
            "timeouts": null,
            "vpc_id": "vpc-026462a7946af80f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389662951147:security-group/sg-00d2fd75c195aa9f9",
            "description": "terraform-bastion-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d2fd75c195aa9f9",
            "ingress": [
              {
                "cidr_blocks": [
                  "131.129.220.207/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-bastion-sg",
            "name_prefix": "",
            "owner_id": "389662951147",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "test-dev-bastion-sg",
              "Project": "test"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "test-dev-bastion-sg",
              "Project": "test"
            },
            "timeouts": null,
            "vpc_id": "vpc-026462a7946af80f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389662951147:security-group/sg-097e719b22e303caa",
            "description": "terraform-web-sg",
            "egress": [],
            "id": "sg-097e719b22e303caa",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00d2fd75c195aa9f9"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-045790e23d99128bf"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-web-sg",
            "name_prefix": "",
            "owner_id": "389662951147",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "test-dev-web-sg",
              "Project": "test"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "test-dev-web-sg",
              "Project": "test"
            },
            "timeouts": null,
            "vpc_id": "vpc-026462a7946af80f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_in_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2352638357",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-045790e23d99128bf",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform_alb_sg",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_in_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2658879851",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-045790e23d99128bf",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform_alb_sg",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_out_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2625440106",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-045790e23d99128bf",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform_alb_sg",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_in_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "131.129.220.207/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-587819357",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00d2fd75c195aa9f9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform_bastion_sg",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_out_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1661244365",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00d2fd75c195aa9f9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform_bastion_sg",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_in_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1265719476",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-097e719b22e303caa",
            "self": false,
            "source_security_group_id": "sg-045790e23d99128bf",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform_alb_sg",
            "aws_security_group.terraform_web_sg",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_in_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2549494297",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-097e719b22e303caa",
            "self": false,
            "source_security_group_id": "sg-00d2fd75c195aa9f9",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform_bastion_sg",
            "aws_security_group.terraform_web_sg",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389662951147:subnet/subnet-0572583fb8ea893da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0572583fb8ea893da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "389662951147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "test-dev-subnet",
              "Project": "test",
              "Type": "private"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "test-dev-subnet",
              "Project": "test",
              "Type": "private"
            },
            "vpc_id": "vpc-026462a7946af80f3"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389662951147:subnet/subnet-069bce8a64f3d7ca8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.21.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069bce8a64f3d7ca8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "389662951147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "test-dev-subnet",
              "Project": "test",
              "Type": "private"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "test-dev-subnet",
              "Project": "test",
              "Type": "private"
            },
            "vpc_id": "vpc-026462a7946af80f3"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389662951147:subnet/subnet-0d1615056df5570fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1615056df5570fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "389662951147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "test-dev-subnet",
              "Project": "test",
              "Type": "public"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "test-dev-subnet",
              "Project": "test",
              "Type": "public"
            },
            "vpc_id": "vpc-026462a7946af80f3"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389662951147:subnet/subnet-0acbbc5c4c1fe612e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0acbbc5c4c1fe612e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "389662951147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "test-dev-subnet",
              "Project": "test",
              "Type": "public"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "test-dev-subnet",
              "Project": "test",
              "Type": "public"
            },
            "vpc_id": "vpc-026462a7946af80f3"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389662951147:vpc/vpc-026462a7946af80f3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0fd40cfe48c7c2061",
            "default_route_table_id": "rtb-0db1f94adeaa97eff",
            "default_security_group_id": "sg-0ca2d0eab28f5af43",
            "dhcp_options_id": "dopt-05df772df8f89680f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-026462a7946af80f3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0db1f94adeaa97eff",
            "owner_id": "389662951147",
            "tags": {
              "Env": "dev",
              "Name": "test-dev-vpc",
              "Project": "test"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "test-dev-vpc",
              "Project": "test"
            }
          }
        }
      ]
    }
  ]
}